# netflix-stock-prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  RESULTS.md  config.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: retrain.yml  test.yml
.streamlit/: config.toml
api/: main.py
app/: STREAMLIT_URL.md  app.py
data/: netflix.csv
models/: regime_model.pkl
notebooks/: analysis.ipynb
outputs/: backtest_curves.csv  drift_report.csv  experiment_log.csv  features_cache.parquet  metrics.json  rolling_sharpe.csv  utils.py
src/: __init__.py  backtest.py  data_loader.py  drift.py  eda.py  explainability.py  feature_engineering.py  feature_utils.py  forecasting.py  model_registry.py  modeling.py  monitoring.py  paper_trade.py  pipeline_config.py  preprocessing.py  regime_detection.py  sentiment.py  test_model.py  tuning.py  uncertainty.py  utils.py  visualization.py
tests/: test_api.py  test_drift.py  test_features.py  test_modeling.py  test_regime_uncertainty.py
