[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nflx-alpha-engine"
version = "1.0.0"
description = "End-to-end ML pipeline for Netflix stock return prediction"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Sumedh Patil" }]
keywords = ["machine-learning", "finance", "stock-prediction", "time-series"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "streamlit>=1.32.0",
    "numpy>=1.26.4,<2.0",
    "pandas>=2.2.2",
    "scikit-learn>=1.4.2",
    "joblib>=1.3.2",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.2",
    "xgboost>=1.7.6",
    "lightgbm>=4.6.0",
    "yfinance>=0.2.38",
    "pyyaml>=6.0",
    "scipy>=1.12.0",
    "vaderSentiment>=3.3.2",
    "pyarrow>=15.0.0",
    "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
    "shap>=0.45.1",
    "hmmlearn>=0.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "optuna>=3.6.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage   = "https://github.com/SumedhPatil1507/netflix-stock-prediction"
Repository = "https://github.com/SumedhPatil1507/netflix-stock-prediction"
"Live App" = "https://netflix-stock-prediction-h4e4qxevbfjweltuumcxeb.streamlit.app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
